--- a/DAT152_Exercise2/src/main/resources/dat152/languages/Messages.properties
+++ b/DAT152_Exercise2/src/main/resources/dat152/languages/Messages.properties
@@ -1,3 +1,8 @@
-greeting=(FB) Take a look at our amazing products
-todaysWeather=(FB) Today's weather
-home=(FB) Home
+greeting=Take a look at our amazing 
+products=products
+name=name
+price=price
+description=description
+add=add to cart
+cart=cart
+home=home
