--- a/DAT152_Exercise2/src/main/resources/dat152/languages/Messages_de.properties
+++ b/DAT152_Exercise2/src/main/resources/dat152/languages/Messages_de.properties
@@ -1,3 +1,10 @@
 greeting=Schauen Sie sich unsere tollen Produkte an
-todaysWeather=Die wetter heute
-home=Zuhause
+products=produkts
+name=name
+price=preis
+description=bezeichnung
+add=in den Warenkorb legen
+cart=wagen
+home=heimat
+
+
